--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,11 @@ security:
       clientAuthenticationScheme: form
     resource:
       userInfoUri: https://graph.facebook.com/me
+spring:
+  application:
+    name: userTesting
+  datasource:
+    url: jdbc:h2:file:~/coasterDB;FILE_LOCK=FS
+    driverClassName: org.h2.Driver
+    username: sa
+    password: 
